build.gradle 복구